fix bug with gray up arrow causing the viewport to have a horizontal scroll

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,9 +1,9 @@
 .about {
-  width: 90vw;
+  width: 85vw;
   /* height: fit-content; */
   margin: auto;
   /* margin-bottom: 5%; */
-  padding: 10px;
+  /* padding: 10px; */
   background-color: var(--primary-color);
   border-radius: 10px;
   display: flex;
@@ -12,6 +12,7 @@
   align-items: center;
   flex-wrap: wrap;
   color: var(--off-white);
+  overflow: hidden;
 }
 
 .about h1 {
@@ -103,8 +104,10 @@
   border-bottom: 100px solid var(--primary-color);
   border-top: 0px;
   position: absolute;
-  transform: translateY(-100px);
+  transform: translateY(-100px) translateX(-15px);
   z-index: 99;
+  max-width: 99vw !important;
+  overflow: hidden;
 }
 
 @media (min-width: 2000px) {
